--- a/package.json
+++ b/package.json
@@ -1,12 +1,24 @@
 {
-  "name": "eslint-config-base",
+  "name": "@ianwremmel/eslint-config-base",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "pretest": "npm run --silent lint",
+    "test": "eslint -c ./main.js ./test/main.js"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "author": "Ian W. Remmel <design@ianwremmel.com>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ianwremmel/eslint-config-base.git"
+  },
+  "devDependencies": {
+    "eslint": "^4.7.2"
+  },
+  "dependencies": {
+    "eslint-plugin-mocha": "^4.11.0"
+  }
 }
