--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "semantic-release": "^8.0.3"
   },
   "peerDependencies": {
+    "eslint": "^4.7.2",
     "eslint-plugin-mocha": "^4.11.0"
   },
   "release": {
